# Zalo-Automation

./: .gitignore  README.md  gui.pyw  pyproject.toml  run.py  start.vbs  stop.vbs
app/: adb_client.py  api_client.py  config.py  debug_store.py  ldplayer.py  logger.py  main.py  models.py  orchestrator.py  selectors.py  storage.py  ui_debug.py  zalo_automation.py
app/routes/: debug.py
config/: accounts.yaml.example  selectors.yaml
